labs/Openshift/OperationalModernization/deploy/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cos-was
  namespace: apps-was
spec:
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: cos-was
  type: ClusterIP
