labs/Openshift/OperationalModernization/deploy/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cos-was
  namespace: apps-was
spec:
  port:
    targetPort: 9080
  to:
    kind: Service
    name: cos-was
